--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -3,24 +3,18 @@ html {
   -webkit-text-size-adjust: 100%;
 }
 
-
-
 body {
   margin: 0;
 }
-
 
 main {
   display: block;
 }
 
-
 h1 {
   font-size: 2em;
   margin: 0.67em 0;
 }
-
-
 
 hr {
   box-sizing: content-box;
@@ -28,18 +22,14 @@ hr {
   overflow: visible;
 }
 
-
 pre {
   font-family: monospace, monospace;
   font-size: 1em;
 }
 
-
-
 a {
   background-color: transparent;
 }
-
 
 abbr[title] {
   border-bottom: none;
@@ -47,12 +37,10 @@ abbr[title] {
   text-decoration: underline dotted;
 }
 
-
 b,
 strong {
   font-weight: bolder;
 }
-
 
 code,
 kbd,
@@ -107,24 +95,24 @@ select {
 }
 
 button,
-[type="button"],
-[type="reset"],
-[type="submit"] {
+[type='button'],
+[type='reset'],
+[type='submit'] {
   -webkit-appearance: button;
 }
 
 button::-moz-focus-inner,
-[type="button"]::-moz-focus-inner,
-[type="reset"]::-moz-focus-inner,
-[type="submit"]::-moz-focus-inner {
+[type='button']::-moz-focus-inner,
+[type='reset']::-moz-focus-inner,
+[type='submit']::-moz-focus-inner {
   border-style: none;
   padding: 0;
 }
 
 button:-moz-focusring,
-[type="button"]:-moz-focusring,
-[type="reset"]:-moz-focusring,
-[type="submit"]:-moz-focusring {
+[type='button']:-moz-focusring,
+[type='reset']:-moz-focusring,
+[type='submit']:-moz-focusring {
   outline: 1px dotted ButtonText;
 }
 
@@ -149,26 +137,25 @@ textarea {
   overflow: auto;
 }
 
-[type="checkbox"],
-[type="radio"] {
+[type='checkbox'],
+[type='radio'] {
   box-sizing: border-box;
   padding: 0;
 }
 
-[type="number"]::-webkit-inner-spin-button,
-[type="number"]::-webkit-outer-spin-button {
+[type='number']::-webkit-inner-spin-button,
+[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
-[type="search"] {
+[type='search'] {
   -webkit-appearance: textfield;
   outline-offset: -2px;
 }
 
-[type="search"]::-webkit-search-decoration {
+[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
-
 
 ::-webkit-file-upload-button {
   -webkit-appearance: button;
@@ -187,7 +174,8 @@ template {
   display: none;
 }
 
-ul, li {
+ul,
+li {
   list-style-type: none;
   margin: 0;
   padding: 0;
@@ -212,7 +200,6 @@ ul, li {
 }
 
 .list-header {
-
 }
 
 .list {
